[package]
name = "bevy_nokhwa"
description = "Nokhwa plugin for the bevy game engine"
documentation = "https://docs.rs/bevy_nokhwa"
repository = "https://github.com/foxzool/bevy_nokhwa"
readme = "README.md"
keywords = ["camera", "v4l2", "opencv", "vision"]
categories = ["Multimedia", "Rendering"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native"]
native = ["nokhwa/input-native"]

[dependencies]
anyhow = "1.0.66"
bevy = { version = "0.9.1", default-features = false, features = ["render", "bevy_asset", "bevy_winit", "x11", "png"] }
bytemuck = { version = "1.7.0" }
flume = "0.10.11"
image = { version = "0.24", default-features = false, features = [] }

[dev-dependencies]
bevy_egui = "0.19.0"


[target.'cfg(target_os = "linux")'.dependencies]
nokhwa = { version = "0.10", features = ["input-v4l", "output-threaded"] }

[target.'cfg(target_os = "windows")'.dependencies]
nokhwa = { version = "0.10", features = ["input-msmf", "output-threaded"] }

[[example]]
name = "native"
path = "examples/native.rs"
required-features = ["native"]

[[example]]
name = "setting"
path = "examples/setting.rs"
required-features = ["native"]